Fix spacing for tags and profile

--- a/frontend/src/css/components/profile.scss
+++ b/frontend/src/css/components/profile.scss
@@ -198,7 +198,8 @@
             width: 707px;
             padding-left: 50px;
             box-sizing: border-box;
-            padding-top: 0px;
+            padding-top: 20px;
+            
             
             .fa-cloud {
                 font-size: 105px;
@@ -238,6 +239,7 @@
                 }                
             }
             .user-info {
+                padding-bottom: 10px;
 
                 .follower-popout-container {
                     position: absolute;
